--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,6 @@ dependencies:
   wakelock_plus: ^1.1.1
   dart_ping: ^8.0.0
   dnsolve: ^1.0.2
-  network_info_plus: ^6.1.3
 
 dev_dependencies:
   flutter_test:
@@ -23,8 +22,8 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   assets:
-    - assets/http_list.txt
-    - assets/dns_list.txt
+    - assets/http_list.csv
+    - assets/dns_list.csv
     - assets/domains.csv
 
 dependency_overrides:
