--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,22 +1,34 @@
 name: Build
+
 on:
   push:
     branches:
       - main
   pull_request:
     types: [opened, synchronize, reopened]
+
 jobs:
   sonarqube:
     name: SonarQube
     runs-on: windows-latest
+
     steps:
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
-      # The analysis requires to retrieve dependencies and build successfully
-      - name: Build
-        run: <mark><commands_to_build_your_project></mark>
-      - name: SonarQube Scan
-        uses: SonarSource/sonarqube-scan-action@v5
-        env:
-          SONAR_TOKEN: 7be0e0c5b75e6bfe595341694382e61c77560b50
+    - uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
+
+    - name: Instalar Flutter
+      uses: subosito/flutter-action@v2
+      with:
+        flutter-version: '3.19.0'
+
+    - name: Obtener dependencias
+      run: flutter pub get
+
+    - name: Ejecutar pruebas con cobertura
+      run: flutter test --coverage
+
+    - name: SonarQube Scan
+      uses: SonarSource/sonarqube-scan-action@v1
+      env:
+        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
