--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,3 @@
-sonar.projectKey=josemituzam_novaipv6
-sonar.organization=josemituzam
-
 
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=novaipv6
@@ -12,3 +9,12 @@ sonar.organization=josemituzam
 
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
+
+sonar.projectKey=josemituzam_novaipv6
+sonar.organization=josemituzam
+sonar.host.url=https://sonarcloud.io
+
+sonar.sources=lib
+sonar.tests=test
+sonar.exclusions=**/*.g.dart,**/*.freezed.dart
+sonar.javascript.lcov.reportPaths=coverage/lcov.info
