--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   build:
-    name: Análisis Flutter + Codecov + SonarCloud
+    name: Flutter CI con Codecov y SonarCloud
     runs-on: ubuntu-latest
 
     steps:
@@ -29,9 +29,10 @@ jobs:
       run: flutter test --coverage
 
     - name: Subir cobertura a Codecov
-      uses: codecov/codecov-action@v3
+      uses: codecov/codecov-action@v5
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
+        slug: josemituzam/novaipv6
         files: coverage/lcov.info
 
     - name: Análisis con SonarCloud
